Added notifications, locations, firebase, preferences, beacon

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -14,7 +14,9 @@
     tools:showIn="@layout/activity_main">
 
     <TextView
+        android:id="@+id/startListeningTapTarget"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"/>
+        android:text="Click Here"
+        android:textSize="@dimen/header_1"/>
 </RelativeLayout>
