--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,9 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="header_1">20dp</dimen>
+    <dimen name="header_2">18dp</dimen>
+    <dimen name="header_3">16dp</dimen>
+    <dimen name="header_4">14dp</dimen>
+    <dimen name="header_5">12dp</dimen>
 </resources>
