--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -2,11 +2,12 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context=".view.fragment.PoolFragment">
+             tools:context="lawonga.intentify.view.fragment.CategoryFragment">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/pool_pots"
+    <!-- TODO: Update blank fragment layout -->
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:text="@string/hello_blank_fragment"/>
 
 </FrameLayout>
