--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,9 +3,10 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
-    <dimen name="header_1">20dp</dimen>
-    <dimen name="header_2">18dp</dimen>
-    <dimen name="header_3">16dp</dimen>
-    <dimen name="header_4">14dp</dimen>
-    <dimen name="header_5">12dp</dimen>
+    <dimen name="header_0">30sp</dimen>
+    <dimen name="header_1">20sp</dimen>
+    <dimen name="header_2">18sp</dimen>
+    <dimen name="header_3">16sp</dimen>
+    <dimen name="header_4">14sp</dimen>
+    <dimen name="header_5">12sp</dimen>
 </resources>
