Continue adding & testing stuff

--- a/app/src/main/res/xml/bottombar_tabs.xml
+++ b/app/src/main/res/xml/bottombar_tabs.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <tabs>
-    <tab
-        id="@+id/tab_pot"
-        title="Winning Pot"/>
+    <!--<tab-->
+        <!--id="@+id/tab_pot"-->
+        <!--title="Winning Pot"/>-->
     <tab
         id="@+id/tab_discover"
         title="Discover"/>
