--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,14 @@
       xmlns:tools="http://schemas.android.com/tools"
       tools:context="lawonga.intentify.view.MainActivity">
     <item
-        android:id="@+id/action_filter"
+        android:visible="false"
+        android:id="@+id/action_buy_in"
         android:orderInCategory="100"
+        android:title="@string/buy"
+        app:showAsAction="always"/>
+    <item
+        android:id="@+id/action_filter"
+        android:orderInCategory="101"
         android:title="@string/filter"
         app:showAsAction="always"/>
 </menu>
