--- a/app/src/main/res/layout/fragment_presenter.xml
+++ b/app/src/main/res/layout/fragment_presenter.xml
@@ -39,4 +39,12 @@
         android:gravity="center_horizontal"
         android:text="Simulate Round Ending"/>
 
+    <Button
+        android:id="@+id/step_5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:gravity="center_horizontal"
+        android:text="Retrieve First Token From DB"/>
+
 </LinearLayout>
